@@ -3753,7 +3753,7 @@ Scenes.MaliceScouts.Group.LossMagicalBondage = function(enc) {
 	Text.NL();
 	Text.Add("<i>“Great job,”</i> the alchemist says, still rummaging about in his toolbelt. <i>“Now, get [himher] into position and hold [himher] there until I manage to find the paddle, will you? There’s a good kitty.”</i>", parse);
 	Text.NL();
-	Text.Add("Driven by something approaching sheer, unadulterated terror, the catboy mutters a few more incantations and gestures with his hands. With a sharp yank, you’re dragged upwards and into the air as your magical bindings levitate, stopping at perhaps a meter off the ground. You’re starting to feel more than a little like a pig on a poke - and with your limbs high in the air and midsection sagging towards the ground, that’s not an entirely inaccurate description of your current predicament.", parse);
+	Text.Add("Driven by something approaching sheer, unadulterated terror, the catboy mutters a few more incantations and gestures with his hands. With a sharp yank, you’re dragged upwards and into the air as your magical bindings levitate, stopping at perhaps a yard off the ground. You’re starting to feel more than a little like a pig on a poke - and with your limbs high in the air and midsection sagging towards the ground, that’s not an entirely inaccurate description of your current predicament.", parse);
 	Text.NL();
 	Text.Add("At length, the alchemist fishes out what he was looking for: a small bronze and wood box perhaps the size of a coconut. As you watch, he disassembles and unfurls it into some kind of contraption, complete with a tripod stand that places its top level with you. It seems incredulous to you that an entire person-sized device could fold into something small enough to fit into a belt pouch, but if anyone can manage it, it’s this unhinged old bastard.", parse);
 	Text.NL();
